k8s/immich/overlays/prod/immich-ing.patch.yaml
# IMMICH INGRESS =============================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich  # Must match the target resource name
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
  - host: $DOMAIN
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prod-immich-server
              port:
                number: 2283
  tls:
    - hosts:
        - $DOMAIN
